# akconfig

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml
ak/: config.py  config_cls.py
examples/: args.py  basic.py  click_args.py
scripts/: build.sh  publish.sh  pypi_token.env  release.sh  tag.sh
tests/: test_config_cls.py
